# stratum

./: .gitignore  Cargo.toml  README.md  test.sh
protocols/guix-example/: Cargo.toml  build.rs  guix-example.scm
protocols/guix-example/src/: lib.rs
protocols/v1/: Cargo.toml  README.md
protocols/v1/examples/client_and_server/src/: main.rs
protocols/v1/src/: error.rs  json_rpc.rs  lib.rs  utils.rs
protocols/v1/src/methods/: client_to_server.rs  mod.rs  server_to_client.rs
protocols/v2/mining-protocol/: Cargo.toml
