[package]
name = "guix-example"
version = "0.1.0"
authors = ["fi3 <email@email.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", default-features = false }
serde_derive = "1.0"
serde_json = "1.0"

[build-dependencies]
cbindgen = "0.16.0"
